AC_PREREQ(2.52)

AC_INIT(foobar, 1.0.0)
AC_CONFIG_SRCDIR(foo/main.c)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AM_MAINTAINER_MODE
AM_DISABLE_STATIC

AM_PROG_LIBTOOL
AC_ISC_POSIX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET


AM_BINRELOC


AC_OUTPUT([
Makefile
foo/Makefile
libfoo/Makefile
doc/Makefile
])
